--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1024,6 +1024,19 @@
 }
 
 @media (max-width: 768px) {
+  .about-container {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-gallery {
+    grid-template-columns: 1fr !important;
+  }
+
+  .speak-image img {
+    display: none;
+  }
+
   .map-img {
     display: none;
   }
